<resources>
    <string name="app_name">BolsaSalesianos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="help_button_text">Ayuda</string>
    <string name="exit_button_text">Salir</string>
    <string name="example_text">Lorem ipsum dolor sit amet.</string>
    <string name="register">Registrarse</string>
    <string name="end_register">Finalizar registro</string>
    <string name="license">Carnet de conducir</string>
    <string name="employed">Trabajando</string>
    <string name="data_transfer">Acepta la cesion de datos</string>
    <string name="dni">DNI</string>
    <string name="welcome_example">Bienvenido Texto de ejemplo!!</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="profile">Perfil</string>
    <string name="last_name">Apellidos</string>
    <string name="start_session">Iniciar sesión</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="repeat_pass">Repetir contraseña</string>
    <string name="name">Nombre</string>
    <string name="email">Email</string>
    <string name="phone">Telefono</string>
    <string name="cif">Cif</string>
    <string name="contact_name">Nombre contacto</string>
    <string name="enterprise_name">Nombre de la empresa</string>
    <string name="workstation">Puesto:</string>
    <string name="vehicle">Coche:</string>
    <string name="works_experience">Experiencia:</string>
    <string name="salary">Salario:</string>
    <string name="study">Estudios:</string>
    <string name="language">Idioma</string>
    <string name="level">Nivel</string>
    <string name="enterprise_register_title">Registro empresas</string>
    <string name="studient_register_title">Registro estudiantes</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="students_studies">Tus estudios</string>
    <string name="student_idioms">Tus idiomas</string>
    <string name="save_study">Guardar nuevo estudio</string>
    <string name="save_Idiom">Guardar nuevo idioma</string>
    <string name="change_studies">Actualizar estudios</string>
    <string name="remove_idiom">Eliminar idioma seleccionado</string>
    <string name="remove_study">Eliminar estudio seleccionado</string>
    <string name="resume">Curriculum</string>

</resources>