<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_studies"
            android:icon="@drawable/ic_baseline_book"
            android:title="@string/students_studies" />
        <item
            android:id="@+id/nav_idioms"
            android:icon="@drawable/ic_baseline_language"
            android:title="@string/student_idioms" />
        <item
            android:id="@+id/nav_edit_studies"
            android:icon="@drawable/ic_baseline_book"
            android:title="@string/change_studies" />
    </group>
</menu>