<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.fragments.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/profile_dni"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:ems="10"
                android:enabled="false"
                android:fontFamily="@font/rubik_medium"
                android:hint="@string/dni"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textAllCaps="false"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:ems="10"
                android:fontFamily="@font/rubik_medium"
                android:hint="@string/name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textAllCaps="false"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/profile_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:ems="10"
                android:fontFamily="@font/rubik_medium"
                android:hint="@string/last_name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textAllCaps="false"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/profile_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:ems="10"
                android:fontFamily="@font/rubik_medium"
                android:hint="@string/phone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textAllCaps="false"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/profile_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:ems="10"
                android:fontFamily="@font/rubik_medium"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textAllCaps="false"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <CheckBox
                android:id="@+id/profile_license_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/license"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <CheckBox
                android:id="@+id/profile_employed_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/employed" />

            <EditText
                android:id="@+id/profile_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:ems="10"
                android:fontFamily="@font/rubik_medium"
                android:hint="@string/user"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textAllCaps="false"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/profile_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:ems="10"
                android:fontFamily="@font/rubik_medium"
                android:hint="@string/pass"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textAllCaps="false"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <EditText
                android:id="@+id/profile_pass_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"
                android:ems="10"
                android:fontFamily="@font/rubik_medium"
                android:hint="@string/repeat_pass"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textAllCaps="false"
                tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

            <CheckBox
                android:id="@+id/profile_data_transfer_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_transfer" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <Button
                    android:id="@+id/profile_save_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/rubik_medium"
                    android:minHeight="48dp"
                    android:text="@string/save_changes"
                    android:textSize="20sp"
                    tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>