<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/workstation_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_medium"
                android:nestedScrollingEnabled="false"
                android:singleLine="true"
                android:text="@string/workstation"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/vehicle_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/vehicle"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/experiences_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/works_experience"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/salary_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/salary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/level_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/study"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/language_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_light"
                android:text="@string/example_text"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/vehicle_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_light"
                android:text="@string/example_text" />

            <TextView
                android:id="@+id/work_experience_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_light"
                android:text="@string/example_text" />

            <TextView
                android:id="@+id/salary_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_light"
                android:text="@string/example_text" />

            <TextView
                android:id="@+id/study_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/rubik_light"
                android:text="@string/example_text" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>